# graphomancer

./: .gitignore  README.md  pyproject.toml
examples/: simple_matplotlib_serialization.py
graphomancer/schemas/: line_schema.py
graphomancer/serializers/matplotlib/: line_serializer.py
js/: README.md  vite.config.js
js/src/: index.js
js/src/renderers/: echart.js
schemas/: line.py
